<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/display">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/title_name"
        android:layout_marginTop="30dp"
        android:background="@drawable/frame_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/red_color"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/R" />

        <TextView
            android:id="@+id/red_color_strong"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/zero" />

        <SeekBar
            android:id="@+id/red_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:progress="0"
            android:max="255"
            android:secondaryProgress="125"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/green_color"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/G" />

        <TextView
            android:id="@+id/green_color_strong"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/zero"  />

        <SeekBar
            android:id="@+id/green_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:progress="0"
            android:max="255"
            android:secondaryProgress="125"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/blue_color"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/B" />

        <TextView
            android:id="@+id/blue_color_strong"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/zero"  />

        <SeekBar
            android:id="@+id/blue_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:progress="0"
            android:max="255"
            android:secondaryProgress="125"/>
    </LinearLayout>

    <Button
        android:id="@+id/display_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/color"
        android:background="@drawable/frame_style"/>
</LinearLayout>

